Add random and restart after the frame break